--- a/Nlw_explore/index.html
+++ b/Nlw_explore/index.html
@@ -133,6 +133,15 @@
 					</li>
 				</ul>
 				
+				<li>
+						<a
+					  	 	target= "_blank"
+							href = "https://www.twitch.tv/respawn">
+						<img src = "https://static-cdn.jtvnw.net/jtv_user_pictures/respawn-profile_image-a28b79d3b4e78963-70x70.png">
+						</a>
+					</li>
+				</ul>
+				
 			</div>
 			
 			
